--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 
-	<div class="modal modal_active">
+	<div class="modal modal_activ">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
@@ -94,7 +94,7 @@
 		</div>
 	</div>
 
-	<div class="modal">
+	<div class="modal order-modal">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
@@ -120,7 +120,7 @@
 		</div>
 	</div>
 
-	<div class="modal">
+	<div class="modal email-modal">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
@@ -143,7 +143,7 @@
 		</div>
 	</div>
 
-	<div class="modal">
+	<div class="modal result-modal">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
