--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -39,19 +39,19 @@
 		</div>
 	</div>
 
-	<div class="modal modal_activ">
-		<div class="modal__container">
+	<div class="modal modal_activ modal_full">
+		<div class="modal__container  ">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
 				<div class="card card_full">
 					<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 					<div class="card__column">
-						<span class="card__category card__category_other">другое</span>
-						<h2 class="card__title">Бэкенд-антистресс</h2>
-						<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
+						<span class="card__category card__category_other">dsfsdf</span>
+						<h2 class="card__title">sdfsdf</h2>
+						<p class="card__text">dsfsdf</p>
 						<div class="card__row">
 							<button class="button">В корзину</button>
-							<span class="card__price">1000 синапсов</span>
+							<span class="card__price">122</span>
 						</div>
 					</div>
 				</div>
