--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,7 +59,7 @@
 		</div>
 	</div>
 
-	<div class="modal">
+	<div class="modal modal_basket">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
@@ -68,26 +68,26 @@
 					<ul class="basket__list">
 						<li class="basket__item card card_compact">
 							<span class="basket__item-index">1</span>
-							<span class="card__title">Фреймворк куки судьбы</span>
-							<span class="card__price">2500 синапсов</span>
+							<span class="card__title"></span>
+							<span class="card__price"></span>
 							<button class="basket__item-delete" aria-label="удалить"></button>
 						</li>
 						<li class="basket__item card card_compact">
 							<span class="basket__item-index">2</span>
-							<span class="card__title">+1 час в сутках</span>
-							<span class="card__price">750 синапсов</span>
+							<span class="card__title"> </span>
+							<span class="card__price"></span>
 							<button class="basket__item-delete" aria-label="удалить"></button>
 						</li>
 						<li class="basket__item card card_compact">
 							<span class="basket__item-index">3</span>
-							<span class="card__title">БЭМ-пилюлька</span>
-							<span class="card__price">150 000 синапсов</span>
+							<span class="card__title"></span>
+							<span class="card__price"></span>
 							<button class="basket__item-delete" aria-label="удалить"></button>
 						</li>
 					</ul>
 					<div class="modal__actions">
 						<button class="button">Оформить</button>
-						<span class="basket__price">153 250 синапсов</span>
+						<span class="basket__price"></span>
 					</div>
 				</div>
 			</div>
