--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -103,8 +103,8 @@
 						<div class="order__field">
 							<h2 class="modal__title">Способ оплаты</h2>
 							<div class="order__buttons">
-								<button type="button" class="button button_alt">Онлайн</button>
-								<button type="button" class="button button_alt">При получении</button>
+								<button type="button" class="card button button_alt">Онлайн</button>
+								<button type="button" class="cash button button_alt">При получении</button>
 							</div>
 						</div>
 						<label class="order__field">
