--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -46,12 +46,12 @@
 				<div class="card card_full">
 					<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 					<div class="card__column">
-						<span class="card__category card__category_other">dsfsdf</span>
-						<h2 class="card__title">sdfsdf</h2>
-						<p class="card__text">dsfsdf</p>
+						<span class="card__category card__category_other"></span>
+						<h2 class="card__title"></h2>
+						<p class="card__text"></p>
 						<div class="card__row">
 							<button class="button">В корзину</button>
-							<span class="card__price">122</span>
+							<span class="card__price"></span>
 						</div>
 					</div>
 				</div>
@@ -67,19 +67,19 @@
 					<h2 class="modal__title">Корзина</h2>
 					<ul class="basket__list">
 						<li class="basket__item card card_compact">
-							<span class="basket__item-index">1</span>
+							<span class="basket__item-index"></span>
 							<span class="card__title"></span>
 							<span class="card__price"></span>
 							<button class="basket__item-delete" aria-label="удалить"></button>
 						</li>
 						<li class="basket__item card card_compact">
-							<span class="basket__item-index">2</span>
+							<span class="basket__item-index"></span>
 							<span class="card__title"> </span>
 							<span class="card__price"></span>
 							<button class="basket__item-delete" aria-label="удалить"></button>
 						</li>
 						<li class="basket__item card card_compact">
-							<span class="basket__item-index">3</span>
+							<span class="basket__item-index"></span>
 							<span class="card__title"></span>
 							<span class="card__price"></span>
 							<button class="basket__item-delete" aria-label="удалить"></button>
